{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "NotDashing",
            "id": "4132183c-7274-45c7-928c-99680c2df6bb",
            "actions": [
                {
                    "name": "Dash",
                    "type": "Value",
                    "id": "30ea21da-3ba5-4979-b4bb-d8ee9f87af59",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "1387efeb-4b1c-4977-9ec8-2bc56a25aa6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "edd5bb8a-5afc-451d-b503-9632597501cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "c94a4fba-a131-43a4-9cb1-6a1d1695e3d1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "b785acd0-d500-4d15-b0b0-f50424a127e1",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9958d470-c3d3-47cd-9830-dc2a57085660",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "21caeff6-ff57-4625-a798-2a5953144ccc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b151903f-4c50-4ab1-81ec-b067c5231512",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dashing",
            "id": "13582de8-3858-465e-9232-ee4e037b2cf3",
            "actions": [
                {
                    "name": "Slam",
                    "type": "Button",
                    "id": "4dbd221a-3257-4a24-93ce-b65a83f90156",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "f142d22d-7b04-4c81-b5d9-cb32f7586ce3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "f515bfc9-9018-4bd5-b9b0-4d53b223fba4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "da8031bc-a298-46a4-9723-015054869f87",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d5f6663-9649-4a5f-843a-2a11150c1e2b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5441b92b-0204-4de6-ae38-9c192a5af35f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ed6ee8f-e50f-460f-8267-21460bb75092",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f25091f0-f2b8-4289-95cf-0127ba60ca0b",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "8efafdb1-6e4e-4f8c-bd87-df339f12b3d1",
            "actions": [
                {
                    "name": "Resume",
                    "type": "Button",
                    "id": "b2028e39-64c8-404a-977a-0e401ae7c4e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "9d0c92a0-9451-489b-b07f-6644f8035969",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3054be0c-7d06-42b4-8ff0-9df8b0445bde",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Resume",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6075a474-37fe-4ed0-b3db-df5ff055af02",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}